--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
+    <!--favicon-->
+    <link rel="icon" href="assets/images/favicon.png" />
     <!-- styleSheet-->
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/style.css" />
@@ -400,3 +402,4 @@
     <script src="assets/js/script.js"></script>
   </body>
 </html>
+
