--- a/index.html
+++ b/index.html
@@ -258,13 +258,14 @@
             <p>We value communication. If there is something that we can do to assist or provide information, please send us a message. We'll make sure the right person gets the message.</p>
           </div>
           
-          <!--Contact Form-->
+         
+           <!--Contact Form-->
           <div class="col s12 m7 contact-form">
             <h5 class="center">
               Simply fill out the form below and we'll be in touch
             </h5>
-              <form class="col m8 s12" action="" method="post">
-                <div class="row ">
+            <form target="_blank" action="https://formsubmit.co/stephanietoups@hotmail.com" method="POST">
+                <div class="row">
                   <div class="input-field col s12">
                     <i class="material-icons prefix">account_circle</i>
                     <input id="name" type="text" autocomplete="off" required />
@@ -289,14 +290,15 @@
                     <label for="message" >Message</label>
                   </div>
                 </div>
-  
+                <input type="text" name="_honey" style="display:none">
+                <input type="hidden" name="_subject" value="New message from phoenix Milledgeville!">
+                <input type="hidden" name="_template" value="table">
                 <div class="row">
                   <div class="col m12">
                     <p class="right-align">
                       <button
                       class="btn btn-large waves-effect waves-light "
-                      type="button"
-                      name="action"
+                      type="submit"
                     >
                       Send Message
                     </button>
