--- a/index.html
+++ b/index.html
@@ -258,13 +258,12 @@
             <p>We value communication. If there is something that we can do to assist or provide information, please send us a message. We'll make sure the right person gets the message.</p>
           </div>
           
-         
-           <!--Contact Form-->
+          <!--Contact Form-->
           <div class="col s12 m7 contact-form">
             <h5 class="center">
               Simply fill out the form below and we'll be in touch
             </h5>
-            <form target="_blank" action="https://formsubmit.co/stephanietoups@hotmail.com" method="POST">
+            <form target="_blank" action="https://formsubmit.co/your-random-string" method="POST">
                 <div class="row">
                   <div class="input-field col s12">
                     <i class="material-icons prefix">account_circle</i>
@@ -293,6 +292,7 @@
                 <input type="text" name="_honey" style="display:none">
                 <input type="hidden" name="_subject" value="New message from phoenix Milledgeville!">
                 <input type="hidden" name="_template" value="table">
+                <input type="hidden" name="_next" value="https://smentzer.github.io/thankyou.html">
                 <div class="row">
                   <div class="col m12">
                     <p class="right-align">
