--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             <h5 class="center">
               Simply fill out the form below and we'll be in touch
             </h5>
-            <form target="_blank" action="https://formsubmit.co/your-random-string" method="POST">
+            <form target="_blank" action="https://formsubmit.co/el/ludivo" method="POST">
                 <div class="row">
                   <div class="input-field col s12">
                     <i class="material-icons prefix">account_circle</i>
