--- a/index.html
+++ b/index.html
@@ -291,8 +291,7 @@
                 </div>
                 <input type="text" name="_honey" style="display:none">
                 <input type="hidden" name="_subject" value="New message from phoenix Milledgeville!">
-                <input type="hidden" name="_template" value="table">
-                <input type="hidden" name="_next" value="https://https://smentzer.github.io/Phoenix_Milledgeville/thankyou.html">
+                  <input type="hidden" name="_next" value="https://smentzer.github.io/Phoenix_Milledgeville/assets/thankyou.html">
                 <div class="row">
                   <div class="col m12">
                     <p class="right-align">
