--- a/index.html
+++ b/index.html
@@ -336,12 +336,12 @@
               <!--phone number-->
               <div class="input-field col s12">
                 <i class="material-icons prefix">phone</i>
-                <input
+               <input
                   id="phone"
-                  type="tel"
+                  type="text"
                   class="validate form-control"
+                  name="phone" required
                   autocomplete="off"
-                  required
                 />
                 <label for="phone">Phone Number</label>
               </div>
