--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
       <div class="row">
         <div class="col s12 m5 contact-info">
           <h4>Phoenix Milledgeville</h4>
-          <a href="mailto:Leasing@PhoenixMilly.com"
-            ><h5>Leasing@PhoenixMilly.com</h5></a
+          <a href="mailto:LeasingMilly@livewithpmg.com"
+            ><h5>LeasingMilly@livewithpmg.com</h5></a
           >
           <a href="tel:+14782023850">
             <h4 class="valign-wrapper">
