--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       <div class="row">
         <div class="col s12 m5 contact-info">
           <h4>Phoenix Milledgeville</h4>
-          <a href="mailto:LeasingMilly@livewithpmg.com"
+          <a href="mailto:https://formsubmit.co/el/nehuya"
             ><h5>LeasingMilly@livewithpmg.com</h5></a
           >
           <a href="tel:+14782023850">
