--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       <div class="row">
         <div class="col s12 m5 contact-info">
           <h4>Phoenix Milledgeville</h4>
-          <a href="mailto:https://formsubmit.co/el/nehuya"
+          <a href="mailto:LeasingMilly@livewithpmg.com"
             ><h5>LeasingMilly@livewithpmg.com</h5></a
           >
           <a href="tel:+14782023850">
@@ -305,7 +305,7 @@
           <!--form start-->
           <form
             target="_blank"
-            action="https://formsubmit.co/el/nehuya"
+            action="https://formsubmit.co/LeasingMilly@livewithpmg.com"
             method="POST"
           >
             <div class="row">
