--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         <div class="col s12 m5 contact-info">
           <h4>Phoenix Milledgeville</h4>
           <a href="mailto:LeasingMilly@livewithpmg.com"
-            ><h5>LeasingMilly@livewithpmg.com</h5></a
+            ><h5>Leasing@PhoenixMilly.com</h5></a
           >
           <a href="tel:+14782023850">
             <h4 class="valign-wrapper">
@@ -336,7 +336,7 @@
               <!--phone number-->
               <div class="input-field col s12">
                 <i class="material-icons prefix">phone</i>
-               <input
+                <input
                   id="phone"
                   type="text"
                   class="validate form-control"
@@ -380,7 +380,7 @@
                   <button
                   class="btn waves-effect waves-light"
                   type="submit"
-                
+                 
                   >
                     Send Message
                   </button>
