--- a/index.html
+++ b/index.html
@@ -369,11 +369,11 @@
             <!--how the information is displayed-->
             <input type="hidden" name="_template" value="table">
 <!--Thank you page redirect-->
-          <!--  <input
+           <input
               type="hidden"
               name="_next"
               value="https://smentzer.github.io/Phoenix_Milledgeville/assets/thankyou.html"
-            /> -->
+            /> 
             <div class="row">
               <div class="col m12">
                 <p class="right-align">
