--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="assets/images/stacked_full_color.png" />
+    <meta property= "og:title" content="Phoenix Milledgeville"/>
+<meta property= "og:image" content="assets/images/thumbnail.png"/>
+<meta property= "og:description" content="Everything you need to thrive in college, all within walking
+distance to both Georgia College and Georgia Military. Phoenix
+Milledgeville provides you the most variety in Milledgeville, GA.
+All of our communities have access to our luxury amenities,
+beautiful clubhouses, and extraordinary management staff."/>
+<meta property="og:url" content="http://phoenixmilledgeville.com/"/>
+<meta property= "og:image:width" content="1200" />
+<meta property="og:image:height" content="627" />
+<meta property="og:type" content="website"/>
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,6 +35,7 @@
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/style.css" />
     <title>Phoenix Milledgeville | Home</title>
+    
   </head>
   <body>
     <!--NavBar-->
