--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <meta property= "og:title" content="Phoenix Milledgeville"/>
 <meta property= "og:image" content="assets/images/thumbnail.png"/>
 <meta property= "og:description" content="Everything you need to thrive in college, all within walking
-distance to both Georgia College and Georgia Military. Phoenix
-Milledgeville provides you the most variety in Milledgeville, GA.
-All of our communities have access to our luxury amenities,
-beautiful clubhouses, and extraordinary management staff."/>
+distance to both Georgia College and Georgia Military."/>
 <meta property="og:url" content="http://phoenixmilledgeville.com/"/>
 <meta property= "og:image:width" content="1200" />
 <meta property="og:image:height" content="627" />
@@ -164,7 +161,7 @@ beautiful clubhouses, and extraordinary management staff."/>
       <div class="col s12 m4">
         <div class="card">
           <div class="card-image">
-            <img class="responsive-image materialboxed" src="assets/images/theHaven600x650.png">
+            <img class="responsive-image materialboxed" src="assets/images/theHaven600x650.png" alt="Phoenix Milledgeville The Haven">
             <span class="card-title">The Haven</span>
           </div>
           <div class="card-content">
@@ -181,7 +178,7 @@ beautiful clubhouses, and extraordinary management staff."/>
       <div class="col s12 m4">
         <div class="card ">
           <div class="card-image">
-            <img class="responsive-image materialboxed" src="assets/images/prospect600x650.png">
+            <img class="responsive-image materialboxed" src="assets/images/prospect600x650.png" alt="Phoenix Milledgeville Prospect A & B">
             <span class="card-title">Prospect A&B</span>
           </div>
           <div class="card-content">
@@ -197,7 +194,7 @@ beautiful clubhouses, and extraordinary management staff."/>
       <div class="col s12 m4">
         <div class="card ">
           <div class="card-image">
-            <img class="responsive-image materialboxed" src="assets/images/campusEdge600x650.png">
+            <img class="responsive-image materialboxed" src="assets/images/campusEdge600x650.png" alt="Phoenix Milledgeville Campus Edge">
             <span class="card-title">Campus Edge</span>
           </div>
           <div class="card-content">
