--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ distance to both Georgia College and Georgia Military."/>
 <meta property="og:url" content="http://phoenixmilledgeville.com/"/>
 <meta property= "og:image:width" content="1200" />
 <meta property="og:image:height" content="627" />
-<meta property="og:type" content="website"/>
+<meta property="og:type" content="business.business"/>
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
