--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@ distance to both Georgia College and Georgia Military."/>
               <i class="material-icons small">phone_iphone</i>  478.202.3850
             </h4>
           </a>
-          <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#76;&#101;&#97;&#115;&#105;&#110;&#103;&#77;&#105;&#108;&#108;&#121;&#64;&#108;&#105;&#118;&#101;&#119;&#105;&#116;&#104;&#112;&#109;&#103;&#46;&#99;&#111;&#109;">&#76;&#101;&#97;&#115;&#105;&#110;&#103;&#77;&#105;&#108;&#108;&#121;&#64;&#108;&#105;&#118;&#101;&#119;&#105;&#116;&#104;&#112;&#109;&#103;&#46;&#99;&#111;&#109;
-            <h5 class="valign-wrapper">
+          <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#76;&#101;&#97;&#115;&#105;&#110;&#103;&#77;&#105;&#108;&#108;&#121;&#64;&#108;&#105;&#118;&#101;&#119;&#105;&#116;&#104;&#112;&#109;&#103;&#46;&#99;&#111;&#109;">
+          <h5 class="valign-wrapper">
               <i class="material-icons small">email </i>  Email Us 
             </h5>
           </a>
