--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ distance to both Georgia College and Georgia Military."/>
             </h4>
           </a>
           <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#76;&#101;&#97;&#115;&#105;&#110;&#103;&#77;&#105;&#108;&#108;&#121;&#64;&#108;&#105;&#118;&#101;&#119;&#105;&#116;&#104;&#112;&#109;&#103;&#46;&#99;&#111;&#109;">
-          <h5 class="valign-wrapper">
+            <h5 class="valign-wrapper">
               <i class="material-icons small">email </i>  Email Us 
             </h5>
           </a>
@@ -416,6 +416,13 @@ distance to both Georgia College and Georgia Military."/>
       </div>
     </div>
 
+    <div class="row">
+      <div class="col s12">
+        <h2 class="center">See What We've Been Up To</h2>
+        <div class="embedsocial-hashtag" data-ref="9cd81b96a5eb8ed9588c31e390ce95add4e245c6"></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialHashtagScript"));</script>
+      </div>
+    </div>
+
     <!--footer-->
     <footer class="page-footer z-depth-1">
       <div class="container">
@@ -508,4 +515,3 @@ distance to both Georgia College and Georgia Military."/>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
-
