--- a/index.html
+++ b/index.html
@@ -299,11 +299,8 @@ distance to both Georgia College and Georgia Military."/>
             Simply fill out the form below and we'll be in touch
           </h5>
           <!--form start-->
-          <form
-            target="_blank"
-            action="https://formsubmit.co/LeasingMilly@livewithpmg.com"
-            method="POST"
-          >
+     <form action="https://formsubmit.co/14e3c99b1bcc23d21c50c8133d35d984" method="POST" />
+
             <div class="row">
               <!--name -->
               <div class="input-field col s12">
