--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ distance to both Georgia College and Georgia Military."/>
             <p>If you are looking for the perfect place to live independently while
               still being conveniently located to Georgia College and Georgia
               Military- look no further than
-              <b> <a target="_blank" href="Thehavenmilly.com"> The Haven</a></b
+              <b> <a target="_blank" href="https://Thehavenmilly.com"> The Haven</a></b
               >. </p>
           </div>
         </div>
@@ -182,7 +182,7 @@ distance to both Georgia College and Georgia Military."/>
             <span class="card-title">Prospect A&B</span>
           </div>
           <div class="card-content">
-            <p>Phoenix Milledgeville’s <a target="_blank" href="Prospectmilly.com"> <b> Prospect </b></a
+            <p>Phoenix Milledgeville’s <a target="_blank" href="https://prospectmilly.com"> <b> Prospect </b></a
               >  communities are divided into two
               different locations to meet the needs of any Georgia College or
               Georgia Military student, and all within walking distance.</p>
@@ -198,7 +198,7 @@ distance to both Georgia College and Georgia Military."/>
             <span class="card-title">Campus Edge</span>
           </div>
           <div class="card-content">
-            <p> <a target="_blank" href="Campusedgemilly.com"> <b> Campus Edge </b></a>
+            <p> <a target="_blank" href="https://campusedgemilly.com"> <b> Campus Edge </b></a>
               apartments are conveniently located within walking distance to both
               Georgia College and Georgia Military. All apartments come fully
               furnished and loaded with modern, stainless-steel appliances.</p>
@@ -455,7 +455,7 @@ distance to both Georgia College and Georgia Military."/>
                 <a
                   class="grey-text text-lighten-3 right-align"
                   target="_blank"
-                  href="Campusedgemilly.com"
+                  href="https://campusedgemilly.com"
                   >Campus Edge</a
                 >
               </li>
@@ -463,7 +463,7 @@ distance to both Georgia College and Georgia Military."/>
                 <a
                   class="grey-text text-lighten-3 right-align"
                   target="_blank"
-                  href="Thehavenmilly.com"
+                  href="https://Thehavenmilly.com"
                   >The Haven</a
                 >
               </li>
@@ -471,7 +471,7 @@ distance to both Georgia College and Georgia Military."/>
                 <a
                   class="grey-text text-lighten-3"
                   target="_blank"
-                  href="Prospectmilly.com"
+                  href="https://prospectmilly.com"
                   >Prospect A</a
                 >
               </li>
@@ -479,7 +479,7 @@ distance to both Georgia College and Georgia Military."/>
                 <a
                   class="grey-text text-lighten-3"
                   target="_blank"
-                  href="Prospectmilly.com"
+                  href="https://prospectmilly.com"
                   >Prospect B</a
                 >
               </li>
