--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ distance to both Georgia College and Georgia Military."/>
           <h6>
             Monday - Friday: 9:00 AM - 7 PM
             <br />
-            Saturday: 12:00 AM - 5 PM
+            Saturday: 12:00 PM - 5 PM
             <br />
             Sunday: CLosed
           </h6>
