--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ distance to both Georgia College and Georgia Military."/>
             <br />
             Saturday: 12:00 PM - 5 PM
             <br />
-            Sunday: CLosed
+            Sunday: Closed
           </h6>
           <p>
             *Please contact our office for holiday hours or early closure
@@ -441,7 +441,7 @@ distance to both Georgia College and Georgia Military."/>
               <br />
               Saturday: 12:00 PM - 5 PM
               <br />
-              Sunday: CLosed
+              Sunday: Closed
             </p>
             <p>
               *Please contact our office for holiday hours or early closure
