--- a/index.html
+++ b/index.html
@@ -136,7 +136,12 @@ distance to both Georgia College and Georgia Military."/>
             <div class="col s12 center-content">
               <h1 class="lighten-2">Phoenix Milledgeville</h1>
               <h3>Live More</h3>
-              <a class="button" href="#contact">Contact Us</a>
+              <a
+              target="_blank"
+              href="https://phoenixmilly.prospectportal.com"
+              class="button grey-text text-lighten-4"
+              >Apply Here</a
+            >
             </div>
           </div>
         </div>
